# Kurse_2_class_OOP

./: .gitignore  README.md  config.py  main.py  pyproject.toml
data/: vacancies_hh.json  vacancies_invalid.json  vacancies_valid.json  vacancy_result.json
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6_class_api_py.html  z_145eef247bfb46b6_class_json_operation_py.html  z_145eef247bfb46b6_class_vacancy_worker_py.html
src/: ajmshxb.py  class_abstract.py  class_api.py  class_json.py  class_json_operation.py  class_vacancy_worker.py  hh.py  test_vacancies.json  utils-r.py  utils.py
tests/: conftest.py  test_class_api.py  test_class_json.py  test_class_vacancy_worker.py
