[project]
name = "kurse-2-class-oop"
version = "0.1.0"
description = ""
authors = [
    {name = "Андрей Гордиевский",email = "agwzdushaz@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
flake8 = "^7.2.0"
isort = "^6.0.1"
mypy = "^1.16.0"
pytest = "^8.3.5"
pytest-html = "^4.1.1"
pytest-cov = "^6.1.1"
coverage = "^7.8.2"

