[project]
name = "kurse-2-class-oop"
version = "0.1.0"
description = ""
authors = [
    {name = "Андрей Гордиевский",email = "agwzdushaz@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
flake8 = "^7.2.0"
isort = "^6.0.1"
mypy = "^1.16.0"
pytest = "^8.3.5"
pytest-html = "^4.1.1"
pytest-cov = "^6.1.1"
coverage = "^7.8.2"


[tool.black]
line-length = 119
exclude = '''
/(
    \.venv
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.pytest_cache
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
exclude = [
    "^.venv/",
    "^.mypy_cache/",
    "^build/",
    "^dist/"
]

[[tool.mypy.overrides]]
module = ["untyped_package.*"]
follow_untyped_imports = true

[tool.isort]
line_length = 119
skip = [".venv", ".git", "__pycache__", "build", "dist"]

[tool.coverage.run]
source = ["."]
omit = [
    "*/__init__.py",
    "utils.py",
    "migrations/*",
    "main.py",
    "conftest.py",
    "config.py",
    "class_abstract.py"
]